Fixed the search box label, and left aligned the text input fields.

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -72,23 +72,20 @@ input:focus {
    .inputRow {
       width: 90%;
       margin: 0 auto;
-      display: table;
+      .flex-display;
       min-height: @rowHeight;
 
       label {
-         display: table-cell;
          font-weight: 700;
          line-height: 1.4em;
-         padding-right: 10px;
+         .flex-grow(0);
       }
 
       input {
-         width: 100%;
+         .flex-grow(1);
          height: 1.4em;
          line-height: 1.4em;
-         display: table-cell;
-         padding-left: 8px;
-         text-align: right;
+         margin-left: 8px;
          background-color: transparent;
          border: none;
          border-radius: 0;
@@ -127,6 +124,7 @@ input:focus {
       cursor: text;
       position: absolute;
       opacity: 0.5;
+      z-index: -1;
    }
 
    .searchLabel-hasText {
@@ -144,6 +142,7 @@ input:focus {
       .flex(0px);
       .flex-grow(1);
       color: @base01;
+      background-color: transparent;
    }
 
    .searchButton {
